# mlops-20261

./: .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
lifecycle/: __main__.py  cli.py  eda.ipynb  pipeline.py
lifecycle/data/raw/: risco_credito.csv
lifecycle/src/: __init__.py  classifier.py  cleaning.py  featurization.py  runner.py
lifecycle/test/: test_lifecycle_pipeline.py
